Contents of hidden column no longer visible over the next visible one

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -117,6 +117,10 @@
 
 .rst-body {
   position: relative;
+
+  td, th {
+    overflow: hidden;
+  }
 }
 
 .rst-sortable .rst-headerText {
